--- a/.gitignore
+++ b/.gitignore
@@ -94,6 +94,6 @@ netanim-trace.txt
 *.ERROR
 
 # possible executables of this project
-exercise8
+#exercise8
 exercise8-2018
 exercise8-2018-extended
