Change network to include LAN and WLAN clients for web browsing

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -18,7 +18,9 @@ sim-time-limit = 200s
 **.networkConfiguratorModule = ""
 **.switchOrRouter.routingTable.routingFile = "switchOrRouter.mrt"
 
-**.numWebDevices = ${0,1,2,3}
+#**.numWebDevicesWLAN = ${0,1,2,3}
+**.numWebDevicesWLAN = 0
+**.numWebDevicesLAN = ${0,1,2,3}
 
 **.constraintAreaMinX = 0m
 **.constraintAreaMinY = 0m
@@ -35,9 +37,9 @@ sim-time-limit = 200s
 **.stationA.mobility.initialX = 15m
 **.stationA.mobility.initialY = 15m
 **.stationA.mobility.initialZ = 0m
-**.webDevice[*].mobility.initialX = uniform(10m,30m)
-**.webDevice[*].mobility.initialY = uniform(10m,30m)
-**.webDevice[*].mobility.initialZ = 0m
+**.webDeviceWLAN[*].mobility.initialX = uniform(10m,30m)
+**.webDeviceWLAN[*].mobility.initialY = uniform(10m,30m)
+**.webDeviceWLAN[*].mobility.initialZ = 0m
 
 # channel physical parameters
 **.carrierFrequency = 2.4GHz
@@ -73,17 +75,17 @@ sim-time-limit = 200s
 **.station*.udpApp[0].localPort = 2000
 **.station*.udpApp[0].destPort = 2000
 **.station*.udpApp[0].messageLength = 32B+12B
-**.station*.udpApp[0].sendInterval = 20ms
+**.station*.udpApp[0].sendInterval = 200s
 **.station*.udpApp[0].maxDelay = 200ms
 **.station*.numUdpApps = 1
 **.stationA.udpApp[0].destAddresses = "stationB"
 **.stationB.udpApp[0].destAddresses = "stationA"
 
 # Web browsing
-**.webDevice[*].numTcpApps = 1
-**.webDevice[*].tcpApp[0].typename = "TCPBasicClientApp"
-**.webDevice[*].tcpApp[0].replyLength = ${replyLength=geometric(0.000002222)*1B}
-**.webDevice[*].tcpApp[0].idleInterval = ${idleInterval=exponential(10s)}
-**.webDevice[*].tcpApp[0].connectAddress = "webServer"
-**.webDevice[*].tcpApp[0].thinkTime = 0s
-**.webDevice[*].tcpApp[0].startTime = ${uniform(0,1)*1s}
+**.webDevice*[*].numTcpApps = 1
+**.webDevice*[*].tcpApp[0].typename = "TCPBasicClientApp"
+**.webDevice*[*].tcpApp[0].replyLength = ${replyLength=geometric(0.000002222)*1B}
+**.webDevice*[*].tcpApp[0].idleInterval = ${idleInterval=exponential(10s)}
+**.webDevice*[*].tcpApp[0].connectAddress = "webServer"
+**.webDevice*[*].tcpApp[0].thinkTime = 0s
+**.webDevice*[*].tcpApp[0].startTime = ${uniform(0,1)*1s}
