changed ini to send voip and more hosts

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -20,7 +20,7 @@ sim-time-limit = 200s
 
 #**.numWebDevicesWLAN = ${0,1,2,3}
 **.numWebDevicesWLAN = 0
-**.numWebDevicesLAN = ${0,1,2,3}
+**.numWebDevicesLAN = ${0,1,2,3,5,7,10,15,20}
 
 **.constraintAreaMinX = 0m
 **.constraintAreaMinY = 0m
@@ -75,7 +75,7 @@ sim-time-limit = 200s
 **.station*.udpApp[0].localPort = 2000
 **.station*.udpApp[0].destPort = 2000
 **.station*.udpApp[0].messageLength = 32B+12B
-**.station*.udpApp[0].sendInterval = 200s
+**.station*.udpApp[0].sendInterval = 20ms
 **.station*.udpApp[0].maxDelay = 200ms
 **.station*.numUdpApps = 1
 **.stationA.udpApp[0].destAddresses = "stationB"
