added some comments in omnetpp.ini

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -1,7 +1,7 @@
 [General]
 network = Exercise8
 
-repeat = 10
+repeat = 5
 sim-time-limit = 200s
 
 # some can be enabled if desired, but
@@ -11,6 +11,13 @@ sim-time-limit = 200s
 **.vector-recording = false
 **.scalar-recording = true
 
+#eventlog-file = omnetpp.log
+#record-eventlog = true 
+
+#cmdenv-express-mode = false
+#cmdenv-redirect-output = true
+#cmdenv-output-file = log.txt
+
 # throughputmeter: Best is to undo the code change recommended in exercise 6
 **.maxInterval = 1s	# interval for the throughputmeters
 **.batchSize = 10000 # batch size for the throughputmeters
@@ -18,9 +25,8 @@ sim-time-limit = 200s
 **.networkConfiguratorModule = ""
 **.switchOrRouter.routingTable.routingFile = "switchOrRouter.mrt"
 
-#**.numWebDevicesWLAN = ${0,1,2,3}
-**.numWebDevicesWLAN = 0
-**.numWebDevicesLAN = ${0,1,2,3,5,7,10,15,20}
+**.numWebDevicesLAN = 0
+**.numWebDevicesWLAN = ${0,1,2,3}
 
 **.constraintAreaMinX = 0m
 **.constraintAreaMinY = 0m
@@ -50,7 +56,7 @@ sim-time-limit = 200s
 # NIC settings
 **.mac.address = "auto"
 **.mac.maxQueueSize = 14
-**.mac.rtsThresholdBytes = 3000B
+**.mac.rtsThresholdBytes = 3000B # with 3000B rts is disabled
 **.wlan[*].mac.retryLimit = 7
 **.wlan[*].mac.cwMinData = 7
 # parameter not used anymore **.wlan[*].mac.cwMinMulticast = 31
@@ -84,7 +90,8 @@ sim-time-limit = 200s
 # Web browsing
 **.webDevice*[*].numTcpApps = 1
 **.webDevice*[*].tcpApp[0].typename = "TCPBasicClientApp"
-**.webDevice*[*].tcpApp[0].replyLength = ${replyLength=geometric(0.000002222)*1B}
+**.webDevice*[*].tcpApp[0].requestLength = 200B
+**.webDevice*[*].tcpApp[0].replyLength = 400000B  #${replyLength=geometric(0.000002222)*1B} #equals mean 450000B
 **.webDevice*[*].tcpApp[0].idleInterval = ${idleInterval=exponential(10s)}
 **.webDevice*[*].tcpApp[0].connectAddress = "webServer"
 **.webDevice*[*].tcpApp[0].thinkTime = 0s
