added vector recording

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -6,9 +6,9 @@ sim-time-limit = 200s
 
 # some can be enabled if desired, but
 # this produces a lot of data
-**.thruputMeter.**.vector-recording = true #true	
+**.thruputMeter.**.vector-recording = true #true
 # disable all others
-**.vector-recording = false
+**.vector-recording = true
 **.scalar-recording = true
 
 # throughputmeter: Best is to undo the code change recommended in exercise 6
@@ -68,6 +68,11 @@ sim-time-limit = 200s
 **.webServer.tcpApp[0].typename = "TCPGenericSrvApp"
 **.webServer.eth[*].numInputHooks = 1
 **.webServer.eth[*].outputHook[0].typename = "ThruputMeter"
+
+**.webServer.networkLayer.inputHook.typename = "ThruputMeter"
+**.webServer.networkLayer.outputHook.typename = "ThruputMeter"
+**.webDevice*[*].networkLayer.inputHook.typename = "ThruputMeter"
+**.webDevice*[*].networkLayer.outputHook.typename = "ThruputMeter"
 
 #VoIP
 # VoIP settings
