cleanup of some parameters

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -18,9 +18,8 @@ sim-time-limit = 200s
 **.networkConfiguratorModule = ""
 **.switchOrRouter.routingTable.routingFile = "switchOrRouter.mrt"
 
-#**.numWebDevicesWLAN = ${0,1,2,3}
-**.numWebDevicesWLAN = 0
-**.numWebDevicesLAN = ${0,1,2,3,5,7,10,15,20}
+**.numWebDevicesWLAN = ${0,1,2,4}
+**.numWebDevicesLAN = 0
 
 **.constraintAreaMinX = 0m
 **.constraintAreaMinY = 0m
@@ -89,7 +88,8 @@ sim-time-limit = 200s
 # Web browsing
 **.webDevice*[*].numTcpApps = 1
 **.webDevice*[*].tcpApp[0].typename = "TCPBasicClientApp"
-**.webDevice*[*].tcpApp[0].replyLength = ${replyLength=geometric(0.000002222)*1B}
+**.webDevice*[*].tcpApp[0].requestLength = 200B
+**.webDevice*[*].tcpApp[0].replyLength = 400000B
 **.webDevice*[*].tcpApp[0].idleInterval = ${idleInterval=exponential(10s)}
 **.webDevice*[*].tcpApp[0].connectAddress = "webServer"
 **.webDevice*[*].tcpApp[0].thinkTime = 0s
